@@ -82,10 +82,9 @@ GLboolean __glcFaceDescOutlineDecompose(__GLCfaceDescriptor* This,
                                         __GLCrendererData* inData,
                                         __GLCcontext* inContext);
 GLboolean __glcFaceDescGetBitmapSize(__GLCfaceDescriptor* This, GLint* outWidth,
-                                     GLint *outHeight, GLint* outTexBoundingBox,
-                                     GLfloat inScaleX, GLfloat inScaleY,
-				     GLint* outPixBoundingBox, int inFactor,
-				     __GLCcontext* inContext);
+                                     GLint *outHeight, GLfloat inScaleX,
+				     GLfloat inScaleY, GLint* outPixBoundingBox,
+				     int inFactor, __GLCcontext* inContext);
 GLboolean __glcFaceDescGetBitmap(__GLCfaceDescriptor* This, GLint inWidth,
                                  GLint inHeight, void* inBuffer,
                                  __GLCcontext* inContext);
