@@ -106,10 +106,10 @@ static void __glcRenderCharBitmap(__GLCfont* inFont, __GLCcontext* inContext,
   GLfloat *transform = inContext->bitmapMatrix;
   GLint pixWidth = 0, pixHeight = 0;
   GLubyte* pixBuffer = NULL;
-  GLint boundingBox[4] = {0, 0, 0, 0};
+  GLint pixBoundingBox[4] = {0, 0, 0, 0};
 
-  __glcFontGetBitmapSize(inFont, &pixWidth, &pixHeight, boundingBox, scale_x,
-			 scale_y, 0, boundingBox, inContext);
+  __glcFontGetBitmapSize(inFont, &pixWidth, &pixHeight, scale_x, scale_y, 0,
+			 pixBoundingBox, inContext);
 
   pixBuffer = (GLubyte *)__glcMalloc(pixWidth * pixHeight);
   if (!pixBuffer) {
@@ -136,12 +136,12 @@ static void __glcRenderCharBitmap(__GLCfont* inFont, __GLCcontext* inContext,
 	     advance[1] * transform[2] - advance[0] * transform[0],
 	     advance[1] * transform[3] - advance[0] * transform[1],
 	     NULL);
-    glBitmap(pixWidth, pixHeight, -boundingBox[0] >> 6,
-	     -boundingBox[1] >> 6, 0., 0., pixBuffer);
+    glBitmap(pixWidth, pixHeight, -pixBoundingBox[0] >> 6,
+	     -pixBoundingBox[1] >> 6, 0., 0., pixBuffer);
   }
   else
-    glBitmap(pixWidth, pixHeight, -boundingBox[0] >> 6,
-	     -boundingBox[1] >> 6,
+    glBitmap(pixWidth, pixHeight, -pixBoundingBox[0] >> 6,
+	     -pixBoundingBox[1] >> 6,
 	     advance[0] * transform[0] + advance[1] * transform[2],
 	     advance[0] * transform[1] + advance[1] * transform[3],
 	     pixBuffer);
